---
source: crates/tapir-script/compiler/src/compile/symtab_visitor.rs
expression: script
input_file: crates/tapir-script/compiler/src/compile/snapshot_tests/symtab_visitor/symbols_in_return_success.tapir
---
Script(
  functions: [
    Function(
      name: "@toplevel",
      span: "[span]",
      statements: [],
      arguments: [],
      return_types: FunctionReturn(
        types: [],
        span: "[span]",
      ),
    ),
    Function(
      name: "my_function",
      span: "[span]",
      statements: [
        Statement(
          span: "[span]",
          kind: SymbolDeclare(
            ident: SymbolId(3),
            value: Expression(
              span: "[span]",
              kind: Integer(5),
            ),
          ),
        ),
        Statement(
          span: "[span]",
          kind: Return(
            values: [
              Expression(
                span: "[span]",
                kind: BinaryOperation(
                  lhs: Expression(
                    span: "[span]",
                    kind: Symbol(SymbolId(3)),
                  ),
                  operator: Add,
                  rhs: Expression(
                    span: "[span]",
                    kind: Symbol(SymbolId(1)),
                  ),
                ),
              ),
              Expression(
                span: "[span]",
                kind: BinaryOperation(
                  lhs: Expression(
                    span: "[span]",
                    kind: Symbol(SymbolId(2)),
                  ),
                  operator: Add,
                  rhs: Expression(
                    span: "[span]",
                    kind: Integer(3),
                  ),
                ),
              ),
            ],
          ),
        ),
      ],
      arguments: [
        FunctionArgument(
          span: "[span]",
          t: TypeWithLocation(
            t: Int,
            span: "[span]",
          ),
          name: Resolved(SymbolId(1)),
        ),
        FunctionArgument(
          span: "[span]",
          t: TypeWithLocation(
            t: Fix,
            span: "[span]",
          ),
          name: Resolved(SymbolId(2)),
        ),
      ],
      return_types: FunctionReturn(
        types: [
          TypeWithLocation(
            t: Int,
            span: "[span]",
          ),
          TypeWithLocation(
            t: Fix,
            span: "[span]",
          ),
        ],
        span: "[span]",
      ),
    ),
  ],
)
